production/k8s-minimal/temporal-ui-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-ui-backend
  namespace: temporal-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-ui-backend
  template:
    metadata:
      labels:
        app: temporal-ui-backend
    spec:
      containers:
        - name: temporal-ui
          image: temporalio/ui:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: temporal-ui-backend
  namespace: temporal-cloud
spec:
  type: ClusterIP
  selector:
    app: temporal-ui-backend
  ports:
    - port: 8080
      targetPort: 8080
